--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
                                 <div class="single_work_demo">
                                     <h5>About Us</h5>
                                     <h3>What is vhHacks?</h3>
-                                    <p class = "about-home-text">THIS IS TEST TEXT THIS MEANS THE SITE NOW OPERATES ON A CUSTOM DOMAIN </p>
+                                    <p class = "about-home-text">vhHacks is Greater Vancouver's first and only hackathon specially for high-schoolers. More than a hundred students gather and work with and against each other to design and present a project in 36 hours.</p>
                                 </div>
                             </div>
                             <div class = "offset-lg-1 col-lg-4 col-md-6">
@@ -138,15 +138,15 @@
                 <div class="col-lg-4 col-sm-6">
                     <div class="single_happy_client">
                         <img src="img/icon/bag.svg" alt="cap">
-                        <span class="counter">24</span>
-                        <h4> Hours</h4>
+                        <span class="counter">36</span>
+                        <h4>Hours</h4>
                     </div>
                 </div>
                 <div class="col-lg-4 col-sm-6">
                     <div class="single_happy_client">
                         <img src="img/icon/shirt.svg" alt="cap">
-                        <span class="counter">75</span>
-                        <h4>work<br>completed</h4>
+                        <span class="counter">38</span>
+                        <h4>Projects</h4>
                     </div>
                 </div>
             </div>
@@ -161,8 +161,8 @@
                     <div class="single_team_member">
                         <img src="img/team/team_1.png" alt="">
                         <div class="single_team_text">
-                            <h3><a href="#"> Jhosef Williams</a></h3>
-                            <p>Web developer</p>
+                            <h3><a href="#">Jason Hsu</a></h3>
+                            <p>Director - Logistics and Finance</p>
                             <div class="team_member_social_icon">
                                 <a href="#">facebok</a>
                                 <a href="#">twitter</a>
@@ -175,8 +175,8 @@
                     <div class="single_team_member">
                         <img src="img/team/team_2.png" alt="">
                         <div class="single_team_text">
-                            <h3><a href="#">Daniel Hancock</a></h3>
-                            <p>Web developer</p>
+                            <h3><a href="#">Andy Shen</a></h3>
+                            <p>Director - President</p>
                             <div class="team_member_social_icon">
                                 <a href="#">facebok</a>
                                 <a href="#">twitter</a>
@@ -189,7 +189,7 @@
                     <div class="single_team_member">
                         <img src="img/team/team_3.png" alt="">
                         <div class="single_team_text">
-                            <h3><a href="#">Bernard Perales</a></h3>
+                            <h3><a href="#">Someone</a></h3>
                             <p>Web developer</p>
                             <div class="team_member_social_icon">
                                 <a href="#">facebok</a>
@@ -269,8 +269,7 @@
                         <div class="single_service_part_iner">
                             <span class="ti-crown"></span>
                             <h3>Mentor</h3>
-                            <p>Creeping for female light yea that lesser cand evening
-                                heaven isn't bearing tree appear </p>
+                            <p>Older students and industry leaders who come to give young hackers the benefit of their experience.</p>
                         </div>
                     </div>
                 </div>
@@ -279,8 +278,7 @@
                         <div class="single_service_part_iner">
                             <span class="ti-user"></span>
                             <h3>Volunteer</h3>
-                            <p>Creeping for female light yea that lesser cand evening
-                                heaven isn't bearing tree appear </p>
+                            <p>Anyone is welcome to help! And a lot of help is needed to keep the event running smoothly.</p>
                         </div>
                     </div>
                 </div>
@@ -289,8 +287,7 @@
                         <div class="single_service_part_iner">
                             <span class="ti-light-bulb"></span>
                             <h3>Workshop Host</h3>
-                            <p>Creeping for female light yea that lesser cand evening
-                                heaven isn't bearing tree appear </p>
+                            <p>Got something super cool to share? Share your knowledge by hosting a workshop.</p>
 
                         </div>
                     </div>
@@ -322,20 +319,22 @@
                 <div class="col-lg-6">
                     <ul class="faq">
                         <li>
-                            <h3 class="question">Frequently Asked Question?
+                            <h3 class="question">What is a Hackathon?
                                 <div class="plus-minus-toggle collapsed"></div>
                             </h3>
-                            <div class="answer">Answer. Donec vitae tellus risus. Aenean sed fermentum risus. Phasellus venenatis
-                                ultricies dignissim. Nunc ante lectus, accumsan non porta at. Donec vitae tellus risus. Aenean sed
-                                fermentum risus. Phasellus venenatis ultricies dignissim.</div>
+                            <div class="answer">Diamonds are made under pressure, and so are innovations. A Hackathon is a design event where teams of people work together to build a project in a short time. Think of a it like a science fair or a case competition, but you only have a day to prepare.</div>
                         </li>
                         <li>
-                            <h3 class="question">Frequently Asked Question?
+                            <h3 class="question">Who is this for?
                                 <div class="plus-minus-toggle collapsed"></div>
                             </h3>
-                            <div class="answer">Answer. Donec vitae tellus risus. Aenean sed fermentum risus. Phasellus venenatis
-                                ultricies dignissim. Nunc ante lectus, accumsan non porta at. Donec vitae tellus risus. Aenean sed
-                                fermentum risus. Phasellus venenatis ultricies dignissim.</div>
+                            <div class="answer">While Hackathons can be for anyone, this particular event is for students 18 and younger, and requires no experience. You can still registor to be a mentor or volunteer if you're older though.</div>
+                        </li>
+                        <li>
+                            <h3 class="question">What does it cost?
+                                <div class="plus-minus-toggle collapsed"></div>
+                            </h3>
+                            <div class="answer">Nothing! Just register beforehand so we know you will be coming.</div>
                         </li>
                     </ul>
                 </div>
@@ -344,20 +343,22 @@
                 <div class="col-lg-6">
                     <ul class="faq">
                         <li>
-                            <h3 class="question">Frequently Asked Question?
+                            <h3 class="question">What should I bring?
                                 <div class="plus-minus-toggle collapsed"></div>
                             </h3>
-                            <div class="answer">Answer. Donec vitae tellus risus. Aenean sed fermentum risus. Phasellus venenatis
-                                ultricies dignissim. Nunc ante lectus, accumsan non porta at. Donec vitae tellus risus. Aenean sed
-                                fermentum risus. Phasellus venenatis ultricies dignissim.</div>
+                            <div class="answer">Government or School-issued photo ID; This (link) waiver signed by your parent or guardian(s); A laptop, charger and headphones.</div>
                         </li>
                         <li>
-                            <h3 class="question">Frequently Asked Question?
+                            <h3 class="question">What if I don't have a team?
                                 <div class="plus-minus-toggle collapsed"></div>
                             </h3>
-                            <div class="answer">Answer. Donec vitae tellus risus. Aenean sed fermentum risus. Phasellus venenatis
-                                ultricies dignissim. Nunc ante lectus, accumsan non porta at. Donec vitae tellus risus. Aenean sed
-                                fermentum risus. Phasellus venenatis ultricies dignissim.</div>
+                            <div class="answer">There will be team-forming and team-building events at the beginning of the Hackathon. We'll make sure to match you with somebody.</div>
+                        </li>
+                        <li>
+                            <h3 class="question">What can I make?
+                                <div class="plus-minus-toggle collapsed"></div>
+                            </h3>
+                            <div class="answer">TBD. For the moment, anything!</div>
                         </li>
                     </ul>
                 </div>
@@ -373,16 +374,14 @@
             <div class="row justify-content-between">
                 <div class="col-sm-6 col-md-6 col-xl-3">
                     <div class="single-footer-widget footer_1">
-                        <a href="index.html"> <img src="img/footer_logo.png" alt=""> </a>
-                        <p>But when shot real her. Chamber her one visite removal six
-                            sending himself boys scot exquisite existend an </p>
-                        <p>But when shot real her hamber her </p>
+                        <a href="index.html"> <img src="#" alt=""> </a>
+                        <p>vhHacks looks forward to your attendance!</p>
                     </div>
                 </div>
                 <div class="col-sm-6 col-md-6 col-xl-4">
                     <div class="single-footer-widget footer_2">
                         <h4>Newsletter</h4>
-                        <p>Stay updated with our latest trends Seed heaven so said place winged over given forth fruit.
+                        <p>Stay updated with important dates and information!
                         </p>
                         <form action="#">
                             <div class="form-group">
@@ -397,13 +396,14 @@
                             </div>
                         </form>
                         <div class="social_icon">
-                            <a href="#"> <i class="ti-facebook"></i> </a>
-                            <a href="#"> <i class="ti-twitter-alt"></i> </a>
-                            <a href="#"> <i class="ti-instagram"></i> </a>
-                            <a href="#"> <i class="ti-skype"></i> </a>
+                            <a href="https://www.facebook.com/vancouverhighschoolhackathon/"> <i class="ti-facebook"></i> </a>
+                            <!--<a href="#"> <i class="ti-twitter-alt"></i> </a>-->
+                            <a href="https://www.instagram.com/vhhacks/"> <i class="ti-instagram"></i></a>
+                            <!--<a href="#"> <i class="ti-skype"></i> </a>-->
                         </div>
                     </div>
                 </div>
+                <!--
                 <div class="col-sm-12 col-md-8 col-xl-3">
                     <div class="single-footer-widget footer_3">
                         <h4>Instagram</h4>
@@ -433,7 +433,7 @@
                                 <a href="#"><i class="ti-instagram"></i></a>
                             </div>
                         </div>
-                    </div>
+                    </div>-->
                 </div>
             </div>
 
