--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
                     <div class="single_service_part">
                         <div class="single_service_part_iner">
                             <span class="ti-mobile"></span>
-                            <h3>Responsive Design</h3>
+                            <h3>Designer</h3>
                             <p>Creeping for female light yea that lesser cand evening
                                 heaven isn't bearing tree appear </p>
                         </div>
@@ -228,7 +228,7 @@
                     <div class="single_service_part">
                         <div class="single_service_part_iner hacker">
                             <span class="ti-layers"></span>
-                            <h3>Quality Matters</h3>
+                            <h3>Programmer</h3>
                             <p>Creeping for female light yea that lesser cand evening
                                 heaven isn't bearing tree appear </p>
                         </div>
@@ -238,7 +238,7 @@
                     <div class="single_service_part">
                         <div class="single_service_part_iner">
                             <span class="ti-lock"></span>
-                            <h3>Better Securty</h3>
+                            <h3>Hardware</h3>
                             <p>Creeping for female light yea that lesser cand evening
                                 heaven isn't bearing tree appear </p>
 
@@ -249,7 +249,7 @@
                     <div class="single_service_part">
                         <div class="single_service_part_iner">
                             <span class="ti-headphone"></span>
-                            <h3>24/7 Service</h3>
+                            <h3>Something</h3>
                             <p>Creeping for female light yea that lesser cand evening
                                 heaven isn't bearing tree appear </p>
                         </div>
