Edit about page

--- a/index.html
+++ b/index.html
@@ -159,42 +159,39 @@
             <div class="row">
                 <div class="col-lg-4 col-sm-6">
                     <div class="single_team_member">
-                        <img src="img/team/team_1.png" alt="">
+                        <img src="img/team/team_1.jpg" alt="">
                         <div class="single_team_text">
                             <h3><a href="#">Jason Hsu</a></h3>
                             <p>Director - Logistics and Finance</p>
                             <div class="team_member_social_icon">
-                                <a href="#">facebok</a>
-                                <a href="#">twitter</a>
-                                <a href="#">skype</a>
+                                <a href="#">facebook</a>
+                                <a href="#">instagram</a>
                             </div>
                         </div>
                     </div>
                 </div>
                 <div class="col-lg-4 col-sm-6">
                     <div class="single_team_member">
-                        <img src="img/team/team_2.png" alt="">
+                        <img src="img/team/img_2.jpeg" alt="">
                         <div class="single_team_text">
                             <h3><a href="#">Andy Shen</a></h3>
                             <p>Director - President</p>
                             <div class="team_member_social_icon">
-                                <a href="#">facebok</a>
-                                <a href="#">twitter</a>
-                                <a href="#">skype</a>
+                                <a href="#">facebook</a>
+                                <a href="#">instagram</a>
                             </div>
                         </div>
                     </div>
                 </div>
                 <div class="col-lg-4 col-sm-6">
                     <div class="single_team_member">
-                        <img src="img/team/team_3.png" alt="">
+                        <img src="img/team/team_3.jpeg" alt="">
                         <div class="single_team_text">
-                            <h3><a href="#">Someone</a></h3>
-                            <p>Web developer</p>
+                            <h3><a href="#">Frank Hui</a></h3>
+                            <p>Director - Vice President</p>
                             <div class="team_member_social_icon">
-                                <a href="#">facebok</a>
-                                <a href="#">twitter</a>
-                                <a href="#">skype</a>
+                                <a href="#">facebook</a>
+                                <a href="#">Instagram</a>
                             </div>
                         </div>
                     </div>
