Add temporary placeholder art to About page

--- a/about.html
+++ b/about.html
@@ -6,7 +6,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>vhHacks - About</title>
-    <link rel="icon" href="img/favicon.png">
+    <link rel="icon" href="img/favicon.ico">
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <!-- animate CSS -->
@@ -78,9 +78,8 @@
             <div class="row align-items-center">
                 <div class="col-lg-5">
                     <div class="about_img">
-                        <img src="img/about_img_1.png" class="img_1" alt="">
                         <img src="img/about_img_2.png" class="img_2" alt="">
-                        <h2>25 Years Working <br>
+                        <h2>The First <br>
                             Experience</h2>
                     </div>
                 </div>
