--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                                 </li>
                                 <li class="nav-item dropdown">
                                     <a class="nav-link dropdown-toggle" href="blog.html" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                        Apply
+                                        Sign Up!
                                     </a>
                                     <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                                         <a class="dropdown-item" href="#hacker">Hacker</a>
@@ -80,7 +80,7 @@
                         <div class="banner_text_iner text-center">
                             <h2>vhHacks <span>2020</span> </h2>
                             <h3>March 14-15</h3>
-                            <a href="#about" class="btn_1">Learn more<i class="ti-angle-right"></i> </a>
+                            <a href="#about" class="btn_1">Sign Up Now!<i class="ti-angle-right"></i> </a>
                         </div>
                     </div>
                 </div>
@@ -109,7 +109,7 @@
                                 <div class="single_work_demo">
                                     <h5>About Us</h5>
                                     <h3>What is vhHacks?</h3>
-                                    <p class = "about-home-text">vhHacks is Greater Vancouver's first and only hackathon specially for high-schoolers. More than a hundred students gather and work with and against each other to design and present a project in 36 hours.</p>
+                                    <p class = "about-home-text">vhHacks is Greater Vancouver's first and only hackathon run mostly by high-schoolers, for high-schoolers. More than a hundred students gather and work with and against each other to design and present a project in 36 hours.</p>
                                 </div>
                             </div>
                             <div class = "offset-lg-1 col-lg-4 col-md-6">
@@ -216,7 +216,7 @@
                         <div class="single_service_part_iner">
                             <span class="ti-mobile"></span>
                             <h3>Designer</h3>
-                            <p>Interested in UI / UX design? Proficient in css, scss, or other design methods? This choice is made for you! </p>
+                            <p>Interested in UI / UX design? Proficient in css, scss, or other design methods? Do you just really like drawing? This role is made for you!</p>
                         </div>
                     </div>
                 </div>
@@ -225,8 +225,7 @@
                         <div class="single_service_part_iner hacker">
                             <span class="ti-layers"></span>
                             <h3>Programmer</h3>
-                            <p>Creeping for female light yea that lesser cand evening
-                                heaven isn't bearing tree appear </p>
+                            <p></p>
                         </div>
                     </div>
                 </div>
