Bye bye team xd

--- a/index.html
+++ b/index.html
@@ -152,8 +152,7 @@
             </div>
         </div>
     </section>
-
-    <!-- team_member part start-->
+    <!-- team_member part start
     <section class="team_member_section section_padding">
         <div class="container">
             <div class="row">
@@ -204,7 +203,7 @@
             </div>
         </div>
     </section>
-    <!-- team_member part end-->
+     team_member part end-->
     <section class = "service_part padding_top section_bg_2" id = "hacker">
         <div class = "container">
             <div class = "row justify-content-center">
