Temporary Background and Homepage

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 
 
     <!--Header-area-->
-    <header class="header-area overlay full-height relative v-center" id="home-page">
+    <header class="header-area full-height relative v-center" id="home-page">
         <div class="absolute anlge-bg"></div>
         <div class="container">
             <div class="row v-center">
