Recolour Webpage Background

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <title>Home</title>
     <!-- Place favicon.ico in the root directory -->
     <link rel="apple-touch-icon" href="images/apple-touch-icon.png">
-    <link rel="shortcut icon" type="image/ico" href="images/favicon.ico" />
+    <link rel="shortcut icon" type="image/ico" href="images/LOGOblue.png" />
     <!-- Plugin-CSS -->
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/owl.carousel.min.css">
@@ -80,10 +80,10 @@
         <div class="container">
             <div class="row v-center">
                 <div class="col-xs-12 col-md-7 header-text">
-                    <h2>It’s all about Promoting your Business</h2>
+                    <h2>Vancouver High School Hackathons</h2>
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Libero ex inventore vel error quibusdam animi fugiat, doloribus dolores consectetur nulla deleniti sint blanditiis quod debitis quis vitae officiis tempora numquam.</p>
                     <a href="#" class="button white">Watch video</a>
-                </div>
+                </div><!--
                 <div class="hidden-xs hidden-sm col-md-5 text-right">
                     <div class="screen-box screen-slider">
                         <div class="item">
@@ -102,51 +102,13 @@
                             <img src="images/screen-5.jpg" alt="">
                         </div>
                     </div>
-                </div>
+                </div>-->
             </div>
         </div>
     </header>
     <!--Header-area/-->
-
-
-
-    <!--Feature-area-->
-    <section class="gray-bg section-padding" id="service-page">
-        <div class="container">
-            <div class="row">
-                <div class="col-xs-12 col-sm-4">
-                    <div class="box">
-                        <div class="box-icon">
-                            <img src="images/service-icon-1.png" alt="">
-                        </div>
-                        <h4>EASY TO USE</h4>
-                        <p>Lorem ipsum dolor sit amt, consectet adop adipisicing elit, sed do eiusmod tepo raraincididunt ugt labore.</p>
-                    </div>
-                </div>
-                <div class="col-xs-12 col-sm-4">
-                    <div class="box">
-                        <div class="box-icon">
-                            <img src="images/service-icon-2.png" alt="">
-                        </div>
-                        <h4>AWESOEM DESIGN</h4>
-                        <p>Lorem ipsum dolor sit amt, consectet adop adipisicing elit, sed do eiusmod tepo raraincididunt ugt labore.</p>
-                    </div>
-                </div>
-                <div class="col-xs-12 col-sm-4">
-                    <div class="box">
-                        <div class="box-icon">
-                            <img src="images/service-icon-3.png" alt="">
-                        </div>
-                        <h4>EASY TO CUSTOMAIZE</h4>
-                        <p>Lorem ipsum dolor sit amt, consectet adop adipisicing elit, sed do eiusmod tepo raraincididunt ugt labore.</p>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
-    <!--Feature-area/-->
-
-    <section class="angle-bg sky-bg section-padding">
+<section class = "sky-bg">
+    <section class="angle-bg section-padding">
         <div class="container">
             <div class="row">
                 <div class="col-xs-12">
@@ -275,8 +237,43 @@
     </section>
 
 
+    <!--Feature-area-->
+    <section class="section-padding" id="service-page">
+        <div class="container">
+            <div class="row">
+                <div class="col-xs-12 col-sm-4">
+                    <div class="box">
+                        <div class="box-icon">
+                            <img src="images/service-icon-1.png" alt="">
+                        </div>
+                        <h4>EASY TO USE</h4>
+                        <p>Lorem ipsum dolor sit amt, consectet adop adipisicing elit, sed do eiusmod tepo raraincididunt ugt labore.</p>
+                    </div>
+                </div>
+                <div class="col-xs-12 col-sm-4">
+                    <div class="box">
+                        <div class="box-icon">
+                            <img src="images/service-icon-2.png" alt="">
+                        </div>
+                        <h4>AWESOEM DESIGN</h4>
+                        <p>Lorem ipsum dolor sit amt, consectet adop adipisicing elit, sed do eiusmod tepo raraincididunt ugt labore.</p>
+                    </div>
+                </div>
+                <div class="col-xs-12 col-sm-4">
+                    <div class="box">
+                        <div class="box-icon">
+                            <img src="images/service-icon-3.png" alt="">
+                        </div>
+                        <h4>EASY TO CUSTOMAIZE</h4>
+                        <p>Lorem ipsum dolor sit amt, consectet adop adipisicing elit, sed do eiusmod tepo raraincididunt ugt labore.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!--Feature-area/-->
 
-    <section class="gray-bg section-padding" id="feature-page">
+    <section class="section-padding" id="feature-page">
         <div class="container">
             <div class="row">
                 <div class="col-xs-12 col-sm-6 col-sm-offset-3 text-center">
@@ -348,7 +345,7 @@
 
 
 
-    <section class="price-area overlay section-padding" id="price-page">
+    <section class="section-padding" id="price-page">
         <div class="container">
             <div class="row">
                 <div class="col-xs-12 col-sm-6 col-sm-offset-3 text-center">
@@ -414,7 +411,7 @@
 
 
 
-    <section class="section-padding gray-bg" id="team-page">
+    <section class="section-padding" id="team-page">
         <div class="container">
             <div class="row">
                 <div class="col-xs-12 col-sm-6 col-sm-offset-3 text-center">
@@ -492,7 +489,7 @@
 
 
 
-    <section class="testimonial-area section-padding gray-bg overlay">
+    <section class="section-padding">
         <div class="container">
             <div class="row">
                 <div class="col-xs-12 col-sm-6 col-sm-offset-3 text-center">
@@ -558,7 +555,7 @@
 
 
 
-    <section class="gray-bg section-padding" id="faq-page">
+    <section class="section-padding" id="faq-page">
         <div class="container">
             <div class="row">
                 <div class="col-xs-12 col-sm-6 col-sm-offset-3 text-center">
@@ -616,9 +613,11 @@
 
 
 
-    <section class="section-padding overlay client-area overlay" id="client-page">
+    <section class="section-padding" id="client-page">
         <div class="container">
             <div class="row text-center">
+                <h1>our team</h1>
+                <br>
                 <div class="col-xs-12">
                     <div class="clients">
                         <div class="item">
@@ -676,7 +675,7 @@
     </section>
 
 
-    <section class="section-padding gray-bg" id="blog-page">
+    <section class="section-padding" id="blog-page">
         <div class="container">
             <div class="row">
                 <div class="col-xs-12 col-sm-4">
@@ -727,7 +726,7 @@
             </div>
         </div>
     </section>
-
+</section>
 
 
 
