Updated Landing Page Image, Change scroll ID, Add "Who we are" text

--- a/index.html
+++ b/index.html
@@ -52,14 +52,14 @@
                     <span class="icon-bar"></span>
                 </button>
                 <a href="#" class="navbar-brand logo">
-                    <h2>colid</h2>
+                    <h2>vhhacks</h2>
                 </a>
             </div>
             <!--Logo/-->
             <nav class="collapse navbar-collapse" id="primary-menu">
                 <ul class="nav navbar-nav navbar-right">
                     <li class="active"><a href="#home-page">Home</a></li>
-                    <li><a href="#service-page">Service</a></li>
+                    <li><a href="#about">Who We Are</a></li>
                     <li><a href="#feature-page">Features</a></li>
                     <li><a href="#price-page">Pricing</a></li>
                     <li><a href="#team-page">Team</a></li>
@@ -81,8 +81,8 @@
             <div class="row v-center">
                 <div class="col-xs-12 col-md-7 header-text">
                     <h2>Vancouver High School Hackathons</h2>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Libero ex inventore vel error quibusdam animi fugiat, doloribus dolores consectetur nulla deleniti sint blanditiis quod debitis quis vitae officiis tempora numquam.</p>
-                    <a href="#" class="button white">Watch video</a>
+                    <p>Learn, Explore, Build your future. Everyone is welcome! </p>
+                    <a href="#" class="button white">Register Now!</a>
                 </div><!--
                 <div class="hidden-xs hidden-sm col-md-5 text-right">
                     <div class="screen-box screen-slider">
@@ -108,12 +108,33 @@
     </header>
     <!--Header-area/-->
 <section class = "sky-bg">
-    <section class="angle-bg section-padding">
+    <section class="angle-bg section-padding"  id="about">
         <div class="container">
             <div class="row">
                 <div class="col-xs-12">
                     <div id="caption_slide" class="carousel slide caption-slider" data-ride="carousel">
-                        <div class="carousel-inner" role="listbox">
+                        <div class="item active row">
+                            <div class="v-center">
+                                <div class="col-xs-12 col-md-6">
+                                    <div class="caption-title" data-animation="animated fadeInUp">
+                                        <h2>What is vhHacks</h2>
+                                    </div>
+                                    <div class="caption-desc" data-animation="animated fadeInUp">
+                                        <p>vhHacks is one of Greater Vancouver's <i>only</i> hackathons dedicated to high school students (<b>like you!</b>) More than one hundred students gather and collaborate to build and
+                                        showcase a project in under 24 hours. No experience? No problem! vhHacks is beginner friendly, so anyone can join and learn a new skill!</p>
+                                    </div>
+                                    <div class="caption-button" data-animation="animated fadeInUp">
+                                        <a href="#" class="button">Register now!</a>
+                                    </div>
+                                </div>
+                                <div class="col-xs-12 col-md-6">
+                                    <div class="one" data-animation="animated fadeInRight">
+                                        <img src="images/vhhacksclear.png" alt="">
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <!--<div class="carousel-inner" role="listbox">
                             <div class="item active row">
                                 <div class="v-center">
                                     <div class="col-xs-12 col-md-6">
@@ -214,8 +235,8 @@
                                     </div>
                                 </div>
                             </div>
-                        </div>
-                        <!-- Indicators -->
+                        </div>-->
+                        <!-- Indicators
                         <ol class="carousel-indicators caption-indector">
                             <li data-target="#caption_slide" data-slide-to="0" class="active">
                                 <strong>Lorem ipsum </strong>consectetur adipisicing elit.
@@ -229,7 +250,7 @@
                             <li data-target="#caption_slide" data-slide-to="3">
                                 <strong>Lorem ipsum </strong>consectetur adipisicing elit.
                             </li>
-                        </ol>
+                        </ol>-->
                     </div>
                 </div>
             </div>
@@ -238,7 +259,7 @@
 
 
     <!--Feature-area-->
-    <section class="section-padding" id="service-page">
+    <section class="section-padding">
         <div class="container">
             <div class="row">
                 <div class="col-xs-12 col-sm-4">
@@ -726,12 +747,11 @@
             </div>
         </div>
     </section>
-</section>
 
 
 
 
-    <footer class="footer-area relative sky-bg" id="contact-page">
+    <footer class="footer-area relative" id="contact-page">
         <div class="absolute footer-bg"></div>
         <div class="footer-top">
             <div class="container">
@@ -814,6 +834,7 @@
             </div>
         </div>
     </footer>
+</section>
 
 
 
